# ml_diabetic

./: build_meal_dataset.py  diabet.code-workspace  fit_linear_icr.py  plot_hupa_patient.py  plot_my_glucose.py
bot_agent/: .dockerignore  .env.desktop.example  .env.example  .gitignore  DEPLOYMENT_VDS.md  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  spec.md
bot_agent/alembic/: env.py
bot_agent/alembic/versions/: 20260613_0001_create_food_tables.py  20260613_0002_create_telegram_users.py  20260614_0003_create_journal_entries.py  20260614_0004_add_journal_carbohydrates.py  20260614_0005_add_food_glycemic_index.py
bot_agent/app/: __init__.py  config.py  main.py
bot_agent/app/agent/: __init__.py  food_agent.py  schemas.py  tools.py
bot_agent/app/api/: __init__.py  config.py  main.py  schemas.py  service.py  tables.py
bot_agent/app/bot/: access.py  handlers.py
bot_agent/app/database/: models.py  repositories.py  session.py
bot_agent/app/services/: carbs.py  food_export.py  food_import.py  journal.py  journal_export.py  journal_import.py  online_food.py  user_access.py
bot_agent/desktop_client/: __init__.py  api_client.py  config.py  dialogs.py  main.py  main_window.py
bot_agent/tests/: test_api.py  test_carbs.py  test_config.py  test_food_export.py  test_food_import.py  test_journal.py  test_journal_export.py  test_journal_import.py  test_online_food.py  test_repository.py  test_users.py
